# psc-transcript-search

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.api  README.md  adminmonitor_validation_results.json  alembic.ini  docker-compose.prod.yml  docker-compose.yml  init.sql  pyproject.toml  render.yaml  requirements-api.txt  requirements.txt
.github/workflows/: deploy-florida-api.yml  deploy.yml
admin-dashboard/: package-lock.json  package.json
alembic/: env.py
app/: __init__.py  database.py  main.py  settings.py
backend/: database.py  database_sqlite.py  main.py  main_sqlite.py  models.py  requirements.txt  search.py
customer-dashboard/: .dockerignore  .env.example  Dockerfile  next.config.js  package-lock.json  package.json  playwright.config.ts
data/: psc_transcripts.db  video_list.json
docs/: ARCHITECTURE.md  smart-extraction-pipeline.md  state_psc_docket_formats.md
frontend/: Dockerfile  app.py
migrations/: 001_initial_schema.sql  002_dockets_tracking.sql  003_pipeline_orchestrator.sql  004_authoritative_dockets.sql  004_expand_docket_schema.sql  004_extracted_dockets.sql  005_entity_matching_system.sql  005_state_psc_sources.sql  006_separate_sector_and_type.sql  007_update_state_scraper_urls.sql  008_entity_validation_columns.sql  100_florida_initial_schema.sql  101_florida_entity_linking.sql  run_004_expand_docket_schema.py  run_007_update_urls.py
scripts/: 01_fetch_videos.py  02_download_audio.py  03_transcribe.py  04_process_segments.py  04b_extract_insights.py  05_load_database.py  05_load_database_sqlite.py  adminmonitor_validator.py  azure-setup.sh  backfill_dates.py  cleanup_extraction.py  extract_dockets.py  migrate_fl_hearings.py  psc_transcript_cleaner.py  run_migrations_and_test.py  scheduled_tasks.py  scrape_adminmonitor.py  scrape_rss.py  scrape_youtube.py  scraper_orchestrator.py  seed_sources.py  test_docket_extraction.py
src/: __init__.py
tests/: __init__.py  conftest.py  test_api_dockets.py  test_api_health.py  test_api_hearings.py  test_florida_models.py  test_state_registry.py
(+162 files in other folders)
